updated registration form to clarify input, updated QC results view to fix wrapping error, updated sample tracking page, corrected alert text size in css

--- a/plasmid/web/SpryMenuBarHorizontal.css
+++ b/plasmid/web/SpryMenuBarHorizontal.css
@@ -18,7 +18,6 @@ ul.MenuBarHorizontal
 	list-style-type: none;
 	font-size: 100%;
 	cursor: default;
-	width: auto;
 }
 /* Set the active Menu Bar with this class, currently setting z-index to accomodate IE rendering bug: http://therealcrisp.xs4all.nl/meuk/IE-zindexbug.html */
 ul.MenuBarActive
